--- a/trunk/mypattern-data-test/mypattern-data-test.cbp
+++ b/trunk/mypattern-data-test/mypattern-data-test.cbp
@@ -20,9 +20,6 @@
 					<Add library="d_mypattern-base" />
 					<Add directory="../UnitTest++/bin/Debug" />
 				</Linker>
-				<ExtraCommands>
-					<Add after="bin/Debug/mypattern-data-test" />
-				</ExtraCommands>
 			</Target>
 			<Target title="Release Linux">
 				<Option output="bin/Release/mypattern-data-test" prefix_auto="1" extension_auto="1" />
@@ -53,6 +50,7 @@
 			<Add directory="/usr/lib/i386-linux-gnu/glib-2.0/include" />
 			<Add directory="/usr/include/sigc++-2.0" />
 			<Add directory="/usr/lib/i386-linux-gnu/sigc++-2.0/include" />
+			<Add directory="../mypattern-exceptions/include" />
 		</Compiler>
 		<Linker>
 			<Add library="UnitTest++" />
@@ -60,6 +58,7 @@
 			<Add library="glib-2.0" />
 			<Add directory="../mypattern-data" />
 			<Add directory="../mypattern-base" />
+			<Add directory="../mypattern-exceptions" />
 		</Linker>
 		<Unit filename="main.cpp" />
 		<Unit filename="xmlelementtest.cpp" />
