--- a/trunk/mypattern-exceptions/Makefile
+++ b/trunk/mypattern-exceptions/Makefile
@@ -1,12 +1,18 @@
 # all: %.o
 
+DEBUG?=FALSE
+
 OBJ=./src/exception.o
 
 INCLUDES=-I./include
 
 LIB=libmypattern-exceptions.a
-CC=gcc -Wall -std=c++0x
-CC_OPTIONS=$(shell pkg-config --cflags --libs gtkmm-3.0)
+CC=gcc
+CC_OPTIONS=$(shell pkg-config --cflags --libs gtkmm-3.0) -Wall -std=c++0x
+
+ifeq ($(DEBUG),TRUE)
+	CC_OPTIONS+= -g
+endif
 
 libmypattern-exceptions: message-libmypattern-exceptions $(OBJ)
 	@ar rcs $(LIB) $(OBJ)
