--- a/trunk/mypattern-cad/Makefile
+++ b/trunk/mypattern-cad/Makefile
@@ -3,17 +3,21 @@
 OBJ=./src/size.o ./src/patterncolumnrecord.o ./src/undocommand.o ./src/undocommandqueue.o ./src/selectnamewindow.o ./src/renamepartundocommand.o ./src/cadmainwindow.o ./src/mainwindow.o ./src/program.o
 CPP=./src/size.cpp ./src/patterncolumnrecord.cpp ./src/undocommand.cpp ./src/undocommandqueue.cpp ./src/selectnamewindow.cpp ./src/renamepartundocommand.cpp ./src/cadmainwindow.cpp ./src/mainwindow.cpp ./src/program.cpp
 
-INCLUDES=-I./include -I../mypattern-base/include/ -I../mypattern-data/include -I../mypattern-exceptions/include
+INCLUDES=-I./include -I../mypattern-base/include/ -I../mypattern-data/include -I../mypattern-exceptions/include -I../mypattern-draw/include/ 
 
 LIBDIRS=-L../mypattern-base/ -L../mypattern-draw/ -L../mypattern-exceptions/ -L../mypattern-data/
 LIBRARIES=-lmypattern-base -lmypattern-draw -lmypattern-exceptions -lmypattern-data
 
 OUT=mypattern-cad
 CC=g++ -Wall -std=c++0x
-CC_OPTIONS=$(shell pkg-config --cflags --libs gtkmm-3.0)
+CC_OPTIONS=$(shell pkg-config --cflags --libs gtkmm-3.0) 
+
+ifeq ($(DEBUG),TRUE)
+	CC_OPTIONS+= -g
+endif
 
 mypattern-cad: message-mypattern-cad
-	$(CC) $(LIBDIRS) $(INCLUDES) -o $(OUT) main.cpp $(CPP) $(LIBRARIES) $(CC_OPTIONS)
+	@$(CC) $(LIBDIRS) $(INCLUDES) -o $(OUT) main.cpp $(CPP) $(LIBRARIES) $(CC_OPTIONS)
 	@cp ../GUI/mypattern-cad.glade .
 
 message-mypattern-cad:
